--- a/pupul2.css
+++ b/pupul2.css
@@ -22,6 +22,35 @@
     }
 
     .carousel-title {
+      text-align: center;
+      font-size: 24px; /* Ajusta el tamaño de fuente del título según tus necesidades */
+      margin-bottom: 20px; /* Ajusta el margen inferior del título según tus necesidades */
+    }
+
+  .popular {
+      width: 100%;
+      max-width: 800px; /* Ajusta el ancho según tus necesidades */
+      margin: 0 auto;
+    }
+
+    .popular img {
+      width: 90px; /* Ajusta el tamaño de la imagen según tus necesidades */
+      height: auto;
+    }
+
+    .listp-slide {
+      margin: 17px; /* Ajusta la separación entre cada película según tus necesidades */
+    }
+
+    .listp-slide img {
+      cursor: pointer;
+    }
+
+    .listp-slide img:hover {
+      transform: scale(1.2); /* Ajusta la escala de la imagen al hacer hover según tus necesidades */
+    }
+
+    .popular-title {
       text-align: left;
       font-size: 24px; /* Ajusta el tamaño de fuente del título según tus necesidades */
       margin-bottom: 20px; /* Ajusta el margen inferior del título según tus necesidades */
